@@ -48,33 +48,23 @@
             <version>3.11.1</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
-    <build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.8.0</version>
-            <configuration>
-                <source>17</source>
-                <target>17</target>
-                <encoding>UTF-8</encoding>
-                <compilerArgs>
-                    <arg>-XDcompilePolicy=simple</arg>
-                    <arg>-Xplugin:ErrorProne</arg>
-                    <arg>--add-exports</arg>
-                    <arg>java.management/sun.management=ALL-UNNAMED</arg>
-                </compilerArgs>
-                <annotationProcessorPaths>
-                    <path>
-                        <groupId>com.google.errorprone</groupId>
-                        <artifactId>error_prone_core</artifactId>
-                        <version>${error-prone.version}</version>
-                    </path>
-                </annotationProcessorPaths>
-            </configuration>
-        </plugin>
-    </plugins>
-    </build>
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>5.5.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.27.3</version>
+            <scope>test</scope>
+        </dependency>
+
+
+    </dependencies>
 </project>
